// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inbox Snapshots > renders inbox empty state - snapshot 1`] = `
<div>
  <div
    class="h-[calc(100vh-6rem)] md:h-[calc(100vh-8rem)] flex gap-0 md:gap-6"
  >
    <div
      class="w-full md:w-80 flex-col flex"
    >
      <div
        class="flex items-center gap-1.5 mb-4"
      >
        <div
          class="flex gap-1 flex-1 overflow-x-auto"
        >
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 bg-white/10 text-white ring-1 ring-white/20"
          >
            Todos
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-instagram w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(225, 48, 108);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="5"
                ry="5"
                width="20"
                x="2"
                y="2"
              />
              <path
                d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
              />
              <line
                x1="17.5"
                x2="17.51"
                y1="6.5"
                y2="6.5"
              />
            </svg>
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-message-circle w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(37, 211, 102);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
              />
            </svg>
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-send w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(0, 136, 204);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
          </button>
        </div>
        <button
          class="p-2 rounded-lg transition-all shrink-0 text-muted-foreground hover:text-foreground hover:bg-secondary"
          title="Archivadas (0)"
        >
          <svg
            class="lucide lucide-archive w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="5"
              rx="1"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
            />
            <path
              d="M10 12h4"
            />
          </svg>
        </button>
      </div>
      <div
        class="mb-4 space-y-2"
      >
        <div
          class="relative"
        >
          <svg
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            class="flex h-10 w-full rounded-md border-input px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-10 bg-secondary border-0"
            placeholder="Search conversations..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="text-xs px-3 py-1 rounded-full border transition-colors bg-secondary text-muted-foreground border-border/50 hover:text-foreground"
          >
            Todos
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-auto space-y-1"
      >
        <div
          class="text-center py-8 text-muted-foreground"
        >
          <p>
            No conversations yet
          </p>
          <p
            class="text-sm"
          >
            Messages will appear here
          </p>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex-col rounded-2xl border overflow-hidden hidden md:flex bg-card border-border/50"
    >
      <div
        class="flex-1 flex items-center justify-center text-muted-foreground"
      >
        <p>
          Select a conversation to view messages
        </p>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Inbox Snapshots > renders inbox error state - snapshot 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center h-[60vh] gap-4"
  >
    <svg
      class="lucide lucide-circle-alert w-12 h-12 text-destructive"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="12"
        r="10"
      />
      <line
        x1="12"
        x2="12"
        y1="8"
        y2="12"
      />
      <line
        x1="12"
        x2="12.01"
        y1="16"
        y2="16"
      />
    </svg>
    <p
      class="text-muted-foreground"
    >
      Failed to load conversations
    </p>
    <p
      class="text-sm text-destructive"
    >
      Network error
    </p>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Inbox Snapshots > renders inbox loading state - snapshot 1`] = `
<div>
  <div
    class="flex h-[80vh]"
  >
    <div
      class="w-80 border-r border-border/30 p-3 space-y-1"
    >
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
      <div
        class="flex items-center gap-3 px-4 py-3 min-h-[72px] rounded-xl"
      >
        <div
          class="w-14 h-14 rounded-full bg-muted/40 animate-pulse shrink-0"
        />
        <div
          class="flex-1 space-y-2"
        >
          <div
            class="h-4 w-28 rounded bg-muted/40 animate-pulse"
          />
          <div
            class="h-3.5 w-40 rounded bg-muted/30 animate-pulse"
          />
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col p-6"
    >
      <div
        class="h-10 w-48 rounded bg-muted/40 animate-pulse mb-6"
      />
      <div
        class="flex-1 space-y-3"
      >
        <div
          class="h-10 w-64 rounded-lg bg-muted/20 animate-pulse"
        />
        <div
          class="h-10 w-48 ml-auto rounded-lg bg-muted/20 animate-pulse"
        />
        <div
          class="h-10 w-64 rounded-lg bg-muted/20 animate-pulse"
        />
        <div
          class="h-10 w-48 ml-auto rounded-lg bg-muted/20 animate-pulse"
        />
        <div
          class="h-10 w-64 rounded-lg bg-muted/20 animate-pulse"
        />
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Inbox Snapshots > renders inbox with conversations - snapshot 1`] = `
<div>
  <div
    class="h-[calc(100vh-6rem)] md:h-[calc(100vh-8rem)] flex gap-0 md:gap-6"
  >
    <div
      class="w-full md:w-80 flex-col hidden md:flex"
    >
      <div
        class="flex items-center gap-1.5 mb-4"
      >
        <div
          class="flex gap-1 flex-1 overflow-x-auto"
        >
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 bg-white/10 text-white ring-1 ring-white/20"
          >
            Todos
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-instagram w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(225, 48, 108);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="20"
                rx="5"
                ry="5"
                width="20"
                x="2"
                y="2"
              />
              <path
                d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
              />
              <line
                x1="17.5"
                x2="17.51"
                y1="6.5"
                y2="6.5"
              />
            </svg>
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-message-circle w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(37, 211, 102);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"
              />
            </svg>
          </button>
          <button
            class="px-3 py-1.5 rounded-full text-sm font-medium transition-all whitespace-nowrap flex items-center gap-1.5 hover:bg-secondary"
          >
            <svg
              class="lucide lucide-send w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              style="color: rgb(0, 136, 204);"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
          </button>
        </div>
        <button
          class="p-2 rounded-lg transition-all shrink-0 text-muted-foreground hover:text-foreground hover:bg-secondary"
          title="Archivadas (0)"
        >
          <svg
            class="lucide lucide-archive w-4 h-4"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <rect
              height="5"
              rx="1"
              width="20"
              x="2"
              y="3"
            />
            <path
              d="M4 8v11a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8"
            />
            <path
              d="M10 12h4"
            />
          </svg>
        </button>
      </div>
      <div
        class="mb-4 space-y-2"
      >
        <div
          class="relative"
        >
          <svg
            class="lucide lucide-search absolute left-3 top-1/2 -translate-y-1/2 w-4 h-4 text-muted-foreground"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="11"
              cy="11"
              r="8"
            />
            <path
              d="m21 21-4.3-4.3"
            />
          </svg>
          <input
            class="flex h-10 w-full rounded-md border-input px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm pl-10 bg-secondary border-0"
            placeholder="Search conversations..."
            value=""
          />
        </div>
        <div
          class="flex items-center gap-2"
        >
          <button
            class="text-xs px-3 py-1 rounded-full border transition-colors bg-secondary text-muted-foreground border-border/50 hover:text-foreground"
          >
            Todos
          </button>
        </div>
      </div>
      <div
        class="flex-1 overflow-auto space-y-1"
      >
        <div
          class="w-full px-4 py-3 min-h-[72px] text-left transition-all hover:bg-secondary rounded-xl bg-secondary"
        >
          <div
            class="flex items-center gap-3"
          >
            <button
              class="shrink-0"
            >
              <div
                class="w-14 h-14 rounded-full bg-gradient-to-br flex items-center justify-center text-sm font-semibold from-primary/60 to-accent/60"
              >
                JD
              </div>
            </button>
            <button
              class="flex-1 min-w-0 text-left"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <div
                  class="flex items-center gap-1.5 min-w-0"
                >
                  <span
                    style="width: 8px; height: 8px; border-radius: 50%; background-color: rgb(156, 163, 175); display: inline-block; flex-shrink: 0;"
                    title="Nuevo"
                  />
                  <span
                    class="text-[15px] font-semibold truncate"
                  >
                    John Doe
                  </span>
                </div>
                <div
                  class="flex items-center gap-1.5 shrink-0"
                >
                  <span
                    class="text-xs text-muted-foreground"
                  >
                    now
                  </span>
                </div>
              </div>
              <p
                class="text-sm truncate mt-0.5 text-zinc-400"
              >
                Thanks!
              </p>
            </button>
          </div>
        </div>
        <div
          class="w-full px-4 py-3 min-h-[72px] text-left transition-all hover:bg-secondary rounded-xl"
        >
          <div
            class="flex items-center gap-3"
          >
            <button
              class="shrink-0"
            >
              <div
                class="w-14 h-14 rounded-full bg-gradient-to-br flex items-center justify-center text-sm font-semibold from-primary/60 to-accent/60"
              >
                JS
              </div>
            </button>
            <button
              class="flex-1 min-w-0 text-left"
            >
              <div
                class="flex items-center justify-between gap-2"
              >
                <div
                  class="flex items-center gap-1.5 min-w-0"
                >
                  <span
                    style="width: 8px; height: 8px; border-radius: 50%; background-color: rgb(156, 163, 175); display: inline-block; flex-shrink: 0;"
                    title="Nuevo"
                  />
                  <span
                    class="text-[15px] font-semibold truncate"
                  >
                    Jane Smith
                  </span>
                </div>
                <div
                  class="flex items-center gap-1.5 shrink-0"
                >
                  <span
                    class="text-xs text-muted-foreground"
                  >
                    now
                  </span>
                </div>
              </div>
              <p
                class="text-sm truncate mt-0.5 text-zinc-400"
              >
                How much?
              </p>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex-col rounded-2xl border overflow-hidden flex bg-card border-border/50"
    >
      <div
        class="p-4 border-b flex items-center justify-between border-border/50"
      >
        <div
          class="flex items-center gap-3"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 w-10 md:hidden shrink-0"
          >
            <svg
              class="lucide lucide-arrow-left w-5 h-5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m12 19-7-7 7-7"
              />
              <path
                d="M19 12H5"
              />
            </svg>
          </button>
          <div
            class="w-10 h-10 rounded-full bg-gradient-to-br flex items-center justify-center text-sm font-semibold from-primary/60 to-accent/60"
          >
            JD
          </div>
          <div>
            <p
              class="font-semibold"
            >
              John Doe
            </p>
            <div
              class="text-xs text-muted-foreground flex items-center gap-1"
            >
              <button
                class="flex items-center gap-1 hover:text-violet-400 transition-colors"
                title="Abrir @johndoe"
              >
                <svg
                  class="lucide lucide-instagram w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <rect
                    height="20"
                    rx="5"
                    ry="5"
                    width="20"
                    x="2"
                    y="2"
                  />
                  <path
                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
                  />
                  <line
                    x1="17.5"
                    x2="17.51"
                    y1="6.5"
                    y2="6.5"
                  />
                </svg>
                instagram
              </button>
              <span>
                •
              </span>
              <span
                style="color: rgb(156, 163, 175); background-color: rgba(156, 163, 175, 0.125); padding: 2px 8px; border-radius: 9999px; font-size: 11px; font-weight: 600; white-space: nowrap;"
              >
                Nuevo
              </span>
              <span>
                • Score: 
                0
                %
              </span>
            </div>
          </div>
        </div>
        <button
          aria-expanded="false"
          aria-haspopup="menu"
          class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-accent hover:text-accent-foreground h-10 w-10"
          data-state="closed"
          id="radix-:r3:"
          type="button"
        >
          <svg
            class="lucide lucide-ellipsis w-5 h-5"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="1"
            />
            <circle
              cx="19"
              cy="12"
              r="1"
            />
            <circle
              cx="5"
              cy="12"
              r="1"
            />
          </svg>
        </button>
      </div>
      <div
        class="flex-1 overflow-auto p-4"
      >
        <div>
          <div
            class="flex justify-start"
          >
            <div
              style="position: relative; max-width: 80%;"
            >
              <div
                class="bg-[#262626] text-white rounded-2xl rounded-bl-md overflow-hidden"
              >
                <div
                  class="px-4 py-3"
                >
                  <p
                    class="text-[15px] leading-relaxed whitespace-pre-wrap break-words"
                  >
                    Hi there!
                  </p>
                </div>
                <p
                  class="text-[10px] text-gray-500 text-right px-4 pb-2"
                >
                  17:58
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          style="margin-top: 16px;"
        >
          <div
            class="flex justify-end"
          >
            <div
              style="position: relative; max-width: 80%;"
            >
              <div
                class="bg-gradient-to-br from-violet-600 to-purple-600 text-white rounded-2xl rounded-br-md overflow-hidden"
              >
                <div
                  class="px-4 py-3"
                >
                  <p
                    class="text-[15px] leading-relaxed whitespace-pre-wrap break-words"
                  >
                    Hello! How can I help?
                  </p>
                </div>
                <p
                  class="text-[10px] text-white/60 text-right px-4 pb-2"
                >
                  17:58
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="p-4 border-t border-border/50"
      >
        <div
          class="flex gap-3"
        >
          <input
            class="flex h-10 w-full rounded-md border-input px-3 py-2 text-base ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium file:text-foreground placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm flex-1 border-0 bg-secondary"
            placeholder="Type a message..."
            value=""
          />
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 hover:opacity-90 transition-opacity bg-gradient-to-r from-primary to-accent"
            disabled=""
            type="button"
          >
            <svg
              class="lucide lucide-send w-4 h-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-label="Notifications (F8)"
    role="region"
    style="pointer-events: none;"
    tabindex="-1"
  >
    <ol
      class="fixed top-0 z-[100] flex max-h-screen w-full flex-col-reverse p-4 sm:bottom-0 sm:right-0 sm:top-auto sm:flex-col md:max-w-[420px]"
      tabindex="-1"
    />
  </div>
</div>
`;
